updated pandas notebooks

--- a/python/pandas/2_pandas_olive.ipynb
+++ b/python/pandas/2_pandas_olive.ipynb
@@ -4,6 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Answers submitted by:  [fill in your name here]\n",
+    "#### Date:  [fill in date completed]\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Python Part 3:  Pandas"
    ]
   },
