minor formatting to notebooks

--- a/python/pandas/2_pandas_olive_questions.ipynb
+++ b/python/pandas/2_pandas_olive_questions.ipynb
@@ -13,14 +13,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python Part 3:  Pandas"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Exercises\n"
+    "# Python Part 3:  Pandas Exercises\n",
+    "---"
    ]
   },
   {
