formatting fixes for olive questions

--- a/python/pandas/2_pandas_olive_questions.ipynb
+++ b/python/pandas/2_pandas_olive_questions.ipynb
@@ -254,7 +254,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Q10:  Rename the column 'region' to:  'sub_region'"
+    "## Q10:  Rename the column 'area' to:  'sub_region'"
    ]
   },
   {
@@ -310,7 +310,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Q13:  How many unique values of 'sub_region_desc' are there?"
+    "## Q13:  How many unique values of 'sub_region_desc' are there?\n",
+    "Hint:  we would like the answer to be 9, but here's where we run into some messy data"
    ]
   },
   {
@@ -339,7 +340,7 @@
     "102.South-Apulia \t1 \t1 \t1 \t1 \t1 \t1 \t1 \t1 \t1 \t1 \t1\n",
     "```\n",
     "\n",
-    "### Hint:  check out this link\n",
+    "Hint:  check out this link\n",
     "http://stackoverflow.com/questions/39583264/pandas-strip-numbers-and-parenthesis-from-string\n",
     " "
    ]
@@ -417,19 +418,7 @@
    },
    "source": [
     "## Q15:  Try again:  How many unique values of 'sub_region_desc' are there?\n",
-    "\n",
-    "#### Hint:  you should see 9 of them!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    " "
+    "Hint:  you should see 9 of them!"
    ]
   },
   {
@@ -496,21 +485,13 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "\n",
-    "# Pandas - To Explore Further\n",
-    "## Things that will be helpful for you in the bootcamp\n",
-    "\n",
-    "* dealing with missing data `NaN`, etc.\n",
-    "* `groupby` objects\n",
-    "* applying functions\n",
-    "\n",
-    "\n",
-    "---"
-   ]
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
